# jetblack-graphql-types

./: README.md  mypy.ini  pyproject.toml
jetblack_graphql_types/: __init__.py  duration_type.py  json_type.py  long_type.py
tests/: test_datetime.py  test_duration.py  test_json.py
